@@ -2,6 +2,7 @@ package com.plazoletadecomidas.plazoleta_ms_plazoleta.infrastructure.output.jpa.
 
 import com.plazoletadecomidas.plazoleta_ms_plazoleta.domain.model.Order;
 import com.plazoletadecomidas.plazoleta_ms_plazoleta.domain.model.OrderItem;
+import com.plazoletadecomidas.plazoleta_ms_plazoleta.domain.model.OrderStatus;
 import com.plazoletadecomidas.plazoleta_ms_plazoleta.domain.spi.OrderPersistencePort;
 import com.plazoletadecomidas.plazoleta_ms_plazoleta.infrastructure.exception.NotFoundException;
 import com.plazoletadecomidas.plazoleta_ms_plazoleta.infrastructure.output.jpa.entity.OrderEntity;
@@ -11,7 +12,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
-import java.util.Arrays;
+
 import java.util.List;
 import java.util.UUID;
 
@@ -25,7 +26,7 @@ public class OrderJpaAdapter implements OrderPersistencePort {
     public boolean existsActiveOrderByCustomer(UUID customerId) {
         return orderRepository.existsByCustomerIdAndStatusIn(
                 customerId,
-                Arrays.asList("PENDIENTE", "EN_PREPARACION", "LISTO")
+                List.of(OrderStatus.PENDIENTE, OrderStatus.EN_PREPARACION, OrderStatus.LISTO)
         );
     }
 
@@ -35,8 +36,9 @@ public class OrderJpaAdapter implements OrderPersistencePort {
         OrderEntity entity = new OrderEntity();
         entity.setCustomerId(order.getCustomerId());
         entity.setRestaurantId(order.getRestaurantId());
-        entity.setStatus(order.getStatus());
+        entity.setStatus(order.getStatus()); // enum
         entity.setCreatedAt(order.getCreatedAt());
+        entity.setAssignedEmployeeId(order.getAssignedEmployeeId());
 
         // Mapear items del dominio a entidades
         List<OrderItemEntity> itemEntities = order.getItems().stream()
@@ -64,25 +66,27 @@ public class OrderJpaAdapter implements OrderPersistencePort {
                 saved.getCustomerId(),
                 saved.getRestaurantId(),
                 domainItems,
-                saved.getStatus(),
+                saved.getStatus(),          // enum
                 saved.getCreatedAt(),
                 saved.getAssignedEmployeeId()
         );
     }
 
     @Override
-    public Page<Order> findByRestaurantAndStatus(UUID restaurantId, String status, Pageable pageable) {
-        Page<OrderEntity> page = orderRepository.findByRestaurantIdAndStatus(restaurantId, status, pageable);
+    public Page<Order> findByRestaurantAndStatus(UUID restaurantId,
+                                                 OrderStatus status,
+                                                 Pageable pageable) {
+        Page<OrderEntity> page = orderRepository
+                .findByRestaurantIdAndStatus(restaurantId, status, pageable);
 
         return page.map(saved -> new Order(
                 saved.getId(),
                 saved.getCustomerId(),
                 saved.getRestaurantId(),
                 saved.getItems().stream()
-                        .map(i -> new com.plazoletadecomidas.plazoleta_ms_plazoleta.domain.model.OrderItem(
-                                i.getDishId(), i.getQuantity()))
+                        .map(i -> new OrderItem(i.getDishId(), i.getQuantity()))
                         .toList(),
-                saved.getStatus(),
+                saved.getStatus(),            // <- enum
                 saved.getCreatedAt(),
                 saved.getAssignedEmployeeId()
         ));
@@ -90,13 +94,13 @@ public class OrderJpaAdapter implements OrderPersistencePort {
 
     @Override
     public Order assignOrderToEmployee(UUID orderId, UUID employeeId) {
-        int updated = orderRepository.assignOrderToEmployee(orderId, employeeId);
+        int updated = orderRepository.assignOrderToEmployee(
+                orderId, employeeId, OrderStatus.EN_PREPARACION);
         if (updated == 0) {
             throw new NotFoundException("Pedido no encontrado o no se pudo asignar");
         }
-        return findById(orderId); // Aquí devuelves el pedido actualizado
+        return findById(orderId);
     }
-
 
     @Override
     public Order findById(UUID orderId) {
@@ -118,5 +122,12 @@ public class OrderJpaAdapter implements OrderPersistencePort {
         );
     }
 
-
+    @Override
+    public Order updateOrderStatus(UUID orderId, OrderStatus newStatus) {
+        int updated = orderRepository.updateStatus(orderId, newStatus);
+        if (updated == 0) {
+            throw new NotFoundException("Pedido no encontrado o no se pudo actualizar el estado");
+        }
+        return findById(orderId);
+    }
 }
